--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "sirv-cli": "^1.0.0",
-    "svelte-navigator": "^3.1.5",
-    "yarn": "^1.22.11"
+    "svelte-navigator": "^3.1.5"
   }
 }
