--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.15.0",
+    "@rollup/plugin-babel": "^5.3.0",
     "sirv-cli": "^1.0.0",
     "svelte-navigator": "^3.1.5"
   }
